--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </script>
 </head>
 <body>
-    <h1 id="translatedWord">1147334</h1>
+    <h1 id="translatedWord">Перевод</h1>
     <input type="text" id="inputWord" placeholder="Введите слово на русском">
     <button onclick="translateWord()">Перевести</button>
 </body>
